# foobar-cmake

./: .gitignore  CMakeLists.txt  README.md  build.bat
bar/: CMakeLists.txt  bar.cpp  bar.h
foo/: foo.cpp
